--- a/wish.html
+++ b/wish.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Pooja!</title>
+    <title>Happy Birthday,Pooja!</title>
     <style>
         body {
             margin: 0;
@@ -271,7 +271,7 @@
             <div class="heart"></div>
             <div class="heart"></div>
         </div>
-        <h1 class="glow">Happy Birthday, Pooja! 😘🎂</h1>
+        <h1 class="glow">Happy Birthday,Pooja!🎂</h1>
         <p>You light up every room you enter, and today the world shines just for you! Funny, smart, and stunning—you’re everything I admire in a person. 💖🤝</p>
         <p>"May your day be filled with laughter, your year with success, and your life with endless love!"</p>
         <p>"Wishing you countless joyful moments and unforgettable memories today and always!"</p>
