--- a/wish.html
+++ b/wish.html
@@ -284,10 +284,14 @@
             <p>Pooja, You make my heart skip a beat every time I see you. Every moment spent with you feels like a beautiful dream come true. Your smile is my favorite sight, and your laughter is the sweetest melody. 💖🤝</p>
             <p>Wishing you the happiest birthday filled with love, joy, and everything your heart desires. I hope we can create more unforgettable memories together soon. 🎂❤️🎉</p>
             <p>"I hope this little surprise brought a big smile to your face! Maybe we can celebrate together soon? 😉"</p>
-            <p>❤️Since we are friends in small part of the life but I promise I never leave you at  any moment and I am always there for you🤝.💖 I want our friendship never ends and I hope we soon meet each other🤝. I hope this wish make you feel happy and impressive to you and make your day more special. Once again my beloved wishes, Many more happy returns of the day bestie.🎂
-                 ❤️🎉.May all your dreams come True.</p>
-            <p> I hope you will accept this birthday wishing proposal😊❤️</p>
-            <p>Funny joke-I thing you will not pay interest to bank because you have interest me😂😊</p>
+            <p>❤️Since we are friends in small part of the life but I promise I never leave you at  any moment and I am always there for you🤝.</p>
+            <p>I want You to travel and you will be with me life long 🫂❤️</p>
+            <p>💖 I want our friendship never ends and I hope we soon meet each other🤝. I hope this wish make you feel happy and impressive to you and make your day more special. </p>
+            <p> I hope you haven't seen like wishing before in your life and you will accept this birthday wishing proposal😊❤️</p>
+            <p>Funny joke-I thing you will not pay interest to bank because you have interest me😂😊 and I also have interest on you.</p>
+            <p>If accept,like and feel that so impressive to you means send 😘❤️</p>
+            <p>Once again my beloved wishes, Many more happy returns of the day bestie.🎂
+                 ❤️🎉.May all your dreams come True.Love You Lots❤️😘</p>
             <button class="close-button" style="background-color: #ff4f81; color:white; border-radius:30px;font-size:35px;font-family:'Times New Roman', Times, serif;border:0px;padding-left:25px;padding-right:25px;padding-top:5px;padding-bottom:5px;cursor:pointer;">Close</button>
         </div>
     </div>
