--- a/wish.html
+++ b/wish.html
@@ -263,7 +263,7 @@
     </style>
 </head>
 <body>
-    <audio id="birthdayMusic" src=""D:\THIS PC\Downloads\Tum Hi Ho Ringtone Download - MobCup.Com.Co.mp3"" loop></audio>
+    <audio id="birthdayMusic" src="Tum Hi Ho Ringtone Download- MobCup.Com.Co.mp3"></audio>
 
     <div class="birthday-card">
         <div class="hearts">
