--- a/wish.html
+++ b/wish.html
@@ -263,7 +263,7 @@
     </style>
 </head>
 <body>
-    <audio id="birthdayMusic" src="Tum Hi Ho Ringtone Download- MobCup.Com.Co.mp3"></audio>
+    <audio id="birthdayMusic" src="Tum Hi Ho Ringtone Download- MobCup.Com.Co.mp3" loop="false" hidden="true" autostart="true"></audio>
 
     <div class="birthday-card">
         <div class="hearts">
